# mem

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  build.bat  clean.bat  clean.sh  cmake.bat  cmake_tests.bat  cmake_tests.sh  cpp.hint  mem.h  mem_aligned_allocator.h  mem_defines.h  mem_hasher.h  mem_pattern.h  mem_pattern_cache.h  mem_rtti.h  mem_scoped_seh.h  mem_utils.h  rtti.h
examples/: CMakeLists.txt  example_0.cpp
include/mem/: aligned_alloc.h  aligned_allocator.h  arch.h  bitwise_enum.h  boyer_moore_scanner.h  char_queue.h  cmd_param-inl.h  cmd_param.h  cpp.hint  data_buffer.h  defines.h  execution_handler.h  fast_vector.h  hasher.h  init_function-inl.h  init_function.h  iter_pair.h  macros.h  mem.h  module.h  pattern.h  pattern_cache.h  platform-inl.h  platform.h  prot_flags.h  protect.h  rtti.h  scoped_seh.h  simd-pattern.h  simd_scanner.h  slice.h  stub.h  utils.h
include/mem/internal/: char_queue.h
misc/: make_frequencies.cpp
tests/: CMakeLists.txt  main.cpp  mem_tests.sln  mem_tests.vcxproj  mem_tests.vcxproj.filters  tests.cpp
